@@ -2,6 +2,10 @@
 CHANGE LOG
 =========================================================================
 
+2007-08-15
+	
+	* added sys.stdout.writelines emulation	
+	
 2007-07-25  Warren L. DeLano <warren@delsci.com>
 
 	* fixed bug with command-line rendering with groups 
